# thin-edge.io

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml
.github/workflows/: build-workflow.yml  head_coverage.yml  integration-tests.yml  pull-request-checks.yml
configuration/debian/tedge-mapper/: postinst
crates/common/certificate/src/: lib.rs
crates/common/download/: Cargo.toml
crates/common/download/examples/: simple_download.rs
crates/common/download/src/: download.rs
crates/common/mqtt_channel/src/: connection.rs  messages.rs
crates/common/tedge_config/tests/: test_tedge_config.rs
crates/common/tedge_utils/src/: file.rs
crates/core/tedge/: Cargo.toml
crates/core/tedge/tests/: main.rs
crates/core/tedge_agent/: Cargo.toml
crates/core/tedge_mapper/: Cargo.toml
crates/core/tedge_watchdog/: Cargo.toml
crates/extensions/tedge_config_manager/: Cargo.toml
crates/extensions/tedge_entity_mqtt_ext/: Cargo.toml
crates/extensions/tedge_entity_mqtt_ext/src/: actor.rs  converter.rs  lib.rs
crates/extensions/tedge_p11_server/: Cargo.toml
docs/src/tutorials/: supported_operations.md
plugins/c8y_configuration_plugin/: Cargo.toml
plugins/c8y_firmware_plugin/: Cargo.toml
plugins/c8y_log_plugin/: Cargo.toml
plugins/c8y_remote_access_plugin/: Cargo.toml
plugins/tedge_apama_plugin/: Cargo.toml
plugins/tedge_apt_plugin/: Cargo.toml
plugins/tedge_configuration_plugin/: Cargo.toml
plugins/tedge_configuration_plugin/src/: lib.rs
plugins/tedge_dummy_plugin/: Cargo.toml
(+38 files in other folders)
